--- a/src/main/resources/view/dashboard1.fxml
+++ b/src/main/resources/view/dashboard1.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -79,7 +78,9 @@
             <Font name="System Bold" size="72.0" />
          </font>
       </Label>
-      <Button layoutX="890.0" layoutY="366.0" mnemonicParsing="false" prefHeight="178.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" text="Button" />
-      <JFXButton layoutX="1194.0" layoutY="371.0" prefHeight="175.0" prefWidth="286.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" />
+      <Button layoutX="901.0" layoutY="406.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/viewStokeButton.css" />
+      <Button layoutX="1212.0" layoutY="402.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
+      <Button layoutX="907.0" layoutY="656.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
+      <Button layoutX="1219.0" layoutY="654.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/viewStokeButton.css" />
    </children>
 </AnchorPane>
