--- a/src/main/resources/view/dashboard1.fxml
+++ b/src/main/resources/view/dashboard1.fxml
@@ -25,7 +25,7 @@
          </image>
       </ImageView>
       <Button layoutX="106.0" layoutY="371.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="690.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
-      <Button layoutX="110.0" layoutY="557.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="690.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" />
+      <Button layoutX="110.0" layoutY="557.0" mnemonicParsing="false" onAction="#orderRepoteOnAction" prefHeight="165.0" prefWidth="690.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" />
       <Button layoutX="112.0" layoutY="752.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="690.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
       <ImageView fitHeight="627.0" fitWidth="685.0" layoutX="858.0" layoutY="346.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -73,14 +73,49 @@
             <Image url="@../img/Frame%2039.png" />
          </image>
       </ImageView>
-      <Label fx:id="timeTxt" layoutX="849.0" layoutY="97.0" prefHeight="140.0" prefWidth="335.0" text="Label">
+      <Label fx:id="timeTxt" layoutX="849.0" layoutY="97.0" prefHeight="140.0" prefWidth="287.0" text="Label">
          <font>
-            <Font name="System Bold" size="72.0" />
+            <Font name="System Bold" size="64.0" />
          </font>
       </Label>
-      <Button layoutX="901.0" layoutY="406.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/viewStokeButton.css" />
-      <Button layoutX="1212.0" layoutY="402.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
+      <Button layoutX="901.0" layoutY="406.0" mnemonicParsing="false" onAction="#leavesStokeRepoteOnAction" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/viewStokeButton.css" />
+      <Button layoutX="1212.0" layoutY="402.0" mnemonicParsing="false" onAction="#packetRepoteOnAction" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
       <Button layoutX="907.0" layoutY="656.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" />
       <Button layoutX="1219.0" layoutY="654.0" mnemonicParsing="false" prefHeight="210.0" prefWidth="270.0" styleClass="button-with-style" stylesheets="@../style/viewStokeButton.css" />
+      <Label fx:id="lblstokeCount" layoutX="991.0" layoutY="521.0" prefHeight="66.0" prefWidth="83.0" text="Label">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="938.0" layoutY="429.0" prefHeight="60.0" prefWidth="215.0" text="Our Leaves Stoke">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="1078.0" layoutY="529.0" prefHeight="50.0" prefWidth="39.0" text="Kg">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblPacket" layoutX="1271.0" layoutY="511.0" prefHeight="85.0" prefWidth="86.0" text="Label">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="1369.0" layoutY="523.0" prefHeight="64.0" prefWidth="62.0" text="Kg">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="1237.0" layoutY="430.0" prefHeight="50.0" prefWidth="228.0" text="Our Packet Stoke">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblDate" layoutX="1177.0" layoutY="93.0" prefHeight="149.0" prefWidth="351.0" text="Label">
+         <font>
+            <Font name="System Bold" size="64.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
