--- a/src/main/resources/view/leves_stoke_page.fxml
+++ b/src/main/resources/view/leves_stoke_page.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -51,5 +52,10 @@
       <DatePicker fx:id="eDateTxt" layoutX="140.0" layoutY="520.0" prefHeight="51.0" prefWidth="426.0" stylesheets="@../style/datePiker.css" />
       <TextField fx:id="deleteTxt" layoutX="26.0" layoutY="12.0" prefHeight="26.0" prefWidth="159.0" />
       <ComboBox fx:id="supplingidTxt" layoutX="140.0" layoutY="618.0" prefHeight="52.0" prefWidth="426.0" stylesheets="@../style/comboBox.css" />
+      <Label layoutX="508.0" layoutY="322.0" prefHeight="51.0" prefWidth="53.0" text="Kg">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
