--- a/src/main/resources/view/login_page.fxml
+++ b/src/main/resources/view/login_page.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -25,7 +26,7 @@
          </font>
       </JFXButton>
       <TextField fx:id="usernameTxt" layoutX="1301.0" layoutY="356.0" prefHeight="55.0" prefWidth="424.0" stylesheets="@../style/textfield.css" />
-      <TextField fx:id="passwordTxt" layoutX="1302.0" layoutY="463.0" prefHeight="55.0" prefWidth="417.0" stylesheets="@../style/textfield.css" />
       <Button layoutX="1597.0" layoutY="529.0" mnemonicParsing="false" onAction="#fogetpwOnAction" prefHeight="25.0" prefWidth="127.0" style="-fx-background-color: tra;" text="Foget Password" />
+      <PasswordField fx:id="passwordTxt" layoutX="1299.0" layoutY="462.0" prefHeight="55.0" prefWidth="424.0" stylesheets="@../style/textfield.css" />
    </children>
 </AnchorPane>
