--- a/src/main/resources/view/supplier_orders.fxml
+++ b/src/main/resources/view/supplier_orders.fxml
@@ -23,12 +23,12 @@
       </ImageView>
       <TextField fx:id="sOidTxt" layoutX="1013.0" layoutY="170.0" prefHeight="62.0" prefWidth="413.0" promptText="id" stylesheets="@../style/textfield.css" />
       <TextField fx:id="weigthTxt" layoutX="1007.0" layoutY="532.0" prefHeight="54.0" prefWidth="419.0" promptText="w" stylesheets="@../style/textfield.css" />
-      <JFXButton layoutX="1009.0" layoutY="751.0" onAction="#addOnAction" prefHeight="54.0" prefWidth="429.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" text="Add Supply Orders">
+      <JFXButton layoutX="1009.0" layoutY="736.0" onAction="#addOnAction" prefHeight="54.0" prefWidth="429.0" styleClass="button-with-style" stylesheets="@../style/loginbutton.css" text="Add Supply Orders">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="1011.0" layoutY="824.0" onAction="#updateOnAction" prefHeight="54.0" prefWidth="429.0" styleClass="button-with-style" stylesheets="@../style/updatebtn.css" text="Update Orders ">
+      <JFXButton layoutX="1006.0" layoutY="802.0" onAction="#updateOnAction" prefHeight="54.0" prefWidth="432.0" styleClass="button-with-style" stylesheets="@../style/updatebtn.css" text="Update Orders ">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -46,5 +46,10 @@
       <JFXComboBox fx:id="sIdTxt" layoutX="1011.0" layoutY="293.0" prefHeight="54.0" prefWidth="413.0" />
       <TextField fx:id="paymentTxt" layoutX="1007.0" layoutY="651.0" prefHeight="54.0" prefWidth="419.0" promptText="Payment" stylesheets="@../style/textfield.css" />
       <DatePicker fx:id="dateTxt" layoutX="1012.0" layoutY="410.0" prefHeight="54.0" prefWidth="413.0" />
+      <JFXButton layoutX="1006.0" layoutY="869.0" onAction="#searchOnAction" prefHeight="56.0" prefWidth="436.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" text="Search">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
     </children>
 </AnchorPane>
