--- a/src/main/resources/view/dashboard1.fxml
+++ b/src/main/resources/view/dashboard1.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -112,10 +113,35 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
+      <Label fx:id="lblPacketSalles" layoutX="979.0" layoutY="764.0" prefHeight="64.0" prefWidth="83.0" text="Label">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font></Label>
       <Label fx:id="lblDate" layoutX="1177.0" layoutY="93.0" prefHeight="149.0" prefWidth="351.0" text="Label">
          <font>
             <Font name="System Bold" size="64.0" />
          </font>
       </Label>
+      <Label layoutX="984.0" layoutY="684.0" prefHeight="50.0" prefWidth="161.0" text="Packet Sell">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="1074.0" layoutY="763.0" prefHeight="64.0" prefWidth="39.0" text="Kg">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="1314.0" layoutY="732.0" prefHeight="92.0" prefWidth="76.0" text="30">
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font></Label>
+      <Label layoutX="1251.0" layoutY="679.0" prefHeight="57.0" prefWidth="202.0" text="Employee Attendent">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <JFXButton layoutX="910.0" layoutY="884.0" onAction="#qrOnAction" prefHeight="64.0" prefWidth="575.0" styleClass="button-with-style" stylesheets="@../style/Savebtn.css" text="Attendent">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></JFXButton>
    </children>
 </AnchorPane>
