--- a/src/main/resources/style/registerbutton.css
+++ b/src/main/resources/style/registerbutton.css
@@ -1,8 +1,8 @@
 .button-with-style {
-    -fx-background-color: rgb(239, 226, 143);
+    -fx-background-color: rgb(241, 224, 113);
     -fx-background-radius: 15;
     -fx-border-radius: 15;
-    -fx-text-fill: #ffffff; /* You can change the text color as needed */
+    -fx-text-fill: #000000; /* You can change the text color as needed */
 }
 
 /* CSS Style for the Button when Hovered */
@@ -13,5 +13,5 @@
 
 /* CSS Style for the Button when Pressed */
 .button-with-style:pressed {
-    -fx-background-color: rgb(243, 227, 43);
+    -fx-background-color: rgb(250, 230, 8);
 }
