--- a/src/main/resources/style/datePiker.css
+++ b/src/main/resources/style/datePiker.css
@@ -32,13 +32,13 @@
     -fx-background-color: lightblue;
 
     /* Text color of the highlighted date */
-    -fx-text-fill: #b2b2f8;
+    -fx-text-fill: #19191a;
 }
 
 /* Arrows for navigating through months */
 .arrow-button {
     /* Color of the arrow */
-    -fx-background-color: #9595e7;
+    -fx-background-color: #090606;
 
     /* Arrow icon color */
     -fx-mark-color: white;
@@ -47,7 +47,7 @@
 /* Month and year label */
 .date-picker .month-year-pane {
     /* Text color of the month and year label */
-    -fx-text-fill: #aeaeef;
+    -fx-text-fill: #090606;
 }
 
 /* Week number cell */
@@ -56,7 +56,7 @@
     -fx-background-color: lightgray;
 
     /* Text color of the week number */
-    -fx-text-fill: #6666f6;
+    -fx-text-fill: #090606;
 }
 
 /* Day cell in the month view */
@@ -65,7 +65,7 @@
     -fx-background-color: lightgray;
 
     /* Text color of the day */
-    -fx-text-fill: #b4b4f5;
+    -fx-text-fill: #090606;
 
     /* Border color of the day cell */
     -fx-border-color: darkgray;
