--- a/src/main/resources/view/customerOrders.fxml
+++ b/src/main/resources/view/customerOrders.fxml
@@ -18,7 +18,7 @@
 
     <children>
         <JFXClippedPane />
-      <TableView fx:id="tbl" layoutX="26.0" layoutY="525.0" prefHeight="440.0" prefWidth="1498.0">
+      <TableView fx:id="tbl" layoutX="26.0" layoutY="525.0" prefHeight="440.0" prefWidth="1498.0" stylesheets="@../style/tableCss.css">
         <columns>
           <TableColumn fx:id="colId" prefWidth="118.0" text="Order ID " />
             <TableColumn fx:id="colCId" prefWidth="181.0" text="Customer ID" />
@@ -65,14 +65,14 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="329.0" layoutY="392.0" onAction="#updateOnAction" prefHeight="57.0" prefWidth="229.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Update Order">
+      <JFXButton layoutX="329.0" layoutY="392.0" onAction="#updateOnAction" prefHeight="57.0" prefWidth="229.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Order Repote">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
       <JFXButton layoutX="579.0" layoutY="390.0" onAction="#plaseOrderOnAction" prefHeight="57.0" prefWidth="235.0" styleClass="button-with-style" stylesheets="@../style/registerbutton.css" text="Plase Order">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
       <JFXComboBox fx:id="itemIdTxt" focusColor="WHITE" layoutX="1179.0" layoutY="219.0" prefHeight="57.0" prefWidth="306.0" promptText="Packet ID" unFocusColor="WHITE" />
