--- a/src/main/resources/view/customerOrders.fxml
+++ b/src/main/resources/view/customerOrders.fxml
@@ -46,15 +46,15 @@
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="paymentTxt" layoutX="366.0" layoutY="219.0" onAction="#paymentOnAction" prefHeight="57.0" prefWidth="133.0" promptText="1Kg Price" style="-fx-background-color: tra;">
+      <TextField fx:id="paymentTxt" layoutX="123.0" layoutY="228.0" onAction="#paymentOnAction" prefHeight="57.0" prefWidth="133.0" promptText="1Kg Price" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="WeigthTxt" layoutX="525.0" layoutY="219.0" prefHeight="57.0" prefWidth="276.0" promptText="Weigth" stylesheets="@../style/textfield.css">
+      <TextField fx:id="WeigthTxt" layoutX="315.0" layoutY="230.0" prefHeight="57.0" prefWidth="276.0" promptText="Weigth" stylesheets="@../style/textfield.css">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField fx:id="dateTxt" layoutX="829.0" layoutY="224.0" prefHeight="52.0" prefWidth="319.0" promptText="Date" style="-fx-background-color: tra;">
+      <TextField fx:id="dateTxt" layoutX="655.0" layoutY="230.0" prefHeight="52.0" prefWidth="319.0" promptText="Date" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
@@ -75,24 +75,34 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXComboBox fx:id="itemIdTxt" focusColor="WHITE" layoutX="1179.0" layoutY="219.0" prefHeight="57.0" prefWidth="306.0" promptText="Packet ID" unFocusColor="WHITE" />
+      <JFXComboBox fx:id="itemIdTxt" focusColor="WHITE" layoutX="1042.0" layoutY="228.0" prefHeight="57.0" prefWidth="306.0" promptText="Packet ID" unFocusColor="WHITE" />
       <TextField fx:id="descreptionTxt" layoutX="1090.0" layoutY="132.0" prefHeight="57.0" prefWidth="420.0" promptText="Descreption" stylesheets="@../style/textfield.css">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Label fx:id="tolLbl" layoutX="87.0" layoutY="219.0" prefHeight="57.0" prefWidth="210.0" text="Total">
+      <Label fx:id="tolLbl" layoutX="1294.0" layoutY="378.0" prefHeight="57.0" prefWidth="164.0">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold" size="36.0" />
          </font></Label>
-      <Label layoutX="727.0" layoutY="222.0" prefHeight="51.0" prefWidth="58.0" text="Kg">
+      <Label layoutX="505.0" layoutY="233.0" prefHeight="51.0" prefWidth="58.0" text="Kg">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="329.0" layoutY="221.0" prefHeight="57.0" prefWidth="33.0" text="Rs">
+      <Label layoutX="90.0" layoutY="228.0" prefHeight="57.0" prefWidth="33.0" text="Rs">
          <font>
             <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="1249.0" layoutY="378.0" prefHeight="57.0" prefWidth="33.0" text="Rs">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="1151.0" layoutY="378.0" prefHeight="57.0" prefWidth="98.0" text="Total">
+         <font>
+            <Font name="System Bold" size="36.0" />
          </font>
       </Label>
     </children>
