--- a/src/main/resources/view/employee_page.fxml
+++ b/src/main/resources/view/employee_page.fxml
@@ -24,7 +24,7 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="empNameTxt" layoutX="175.0" layoutY="222.0" prefHeight="60.0" prefWidth="611.0" promptText="Employee Name " stylesheets="@../style/textfield.css">
+      <TextField fx:id="empNameTxt" layoutX="181.0" layoutY="222.0" prefHeight="60.0" prefWidth="605.0" promptText="Employee Name " stylesheets="@../style/textfield.css">
          <font>
             <Font size="18.0" />
          </font>
@@ -39,7 +39,7 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <JFXButton layoutX="170.0" layoutY="840.0" onAction="#saveEmployeeOnAction" prefHeight="81.0" prefWidth="205.0" styleClass="button-with-style" stylesheets="@../style/Savebtn.css" text="save Employee">
+      <JFXButton layoutX="170.0" layoutY="840.0" onAction="#saveEmployeeOnAction" prefHeight="81.0" prefWidth="205.0" styleClass="button-with-style" stylesheets="@../style/Savebtn.css" text="Add Employe">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -54,7 +54,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXButton>
-      <Label layoutX="14.0" layoutY="22.0" prefHeight="82.0" prefWidth="431.0" text="Add Employee ">
+      <Label layoutX="14.0" layoutY="22.0" prefHeight="82.0" prefWidth="431.0" text="Add Employe ">
          <font>
             <Font name="System Bold" size="48.0" />
          </font>
@@ -69,7 +69,7 @@
         </columns>
       </TableView>
       <JFXComboBox fx:id="uidTxt" focusColor="#405aa800" layoutX="175.0" layoutY="429.0" prefHeight="60.0" prefWidth="611.0" stylesheets="@../style/comboBox.css" unFocusColor="#4d4d4d00" />
-      <DatePicker fx:id="empbdTxt" layoutX="184.0" layoutY="327.0" prefHeight="53.0" prefWidth="279.0" />
+      <DatePicker fx:id="empbdTxt" layoutX="181.0" layoutY="327.0" prefHeight="53.0" prefWidth="282.0" stylesheets="@../style/datePiker.css" />
       <JFXButton layoutX="606.0" layoutY="840.0" onAction="#searchBtnOnAction" prefHeight="81.0" prefWidth="193.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" text="Search">
          <font>
             <Font name="System Bold" size="18.0" />
